# bigearthnet-dl-distributed

./: .gitignore  README.md  main.py  pyproject.toml
experiments/: Readme.md
notebooks/: 01-preliminary.ipynb  01-preliminary_v2.ipynb  plots.ipynb
results/: Readme.md
scripts/: Readme.md  __init__.py  check.py  check_s3_files.py  gen_metadata.py  plots.py  profiler.py  to_peta_parquet.py  to_petastorm.py  to_petastorm_backup.py  to_tfrecord.py  train.py
scripts/bash/: convert.sh  run.sh  run_conversion.sh  run_training.sh  train.sh
scripts/bash/local/: convert.sh  train.sh
