[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bigearthnet-dl-distributed"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.23",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "nbconvert>=7.16.6",
    "pandas>=2.3.3",
    "pyarrow>=17.0.0",
    "rasterio>=1.5.0",
    "tensorflow>=2.15.0",
    "tqdm>=4.67.1",
]

[project.scripts]
gen-metadata = "scripts.gen_metadata:main"
check-s3 = "scripts.check:main"
to-tfrecord = "scripts.to_tfrecord:main"
train-model = "scripts.train:main"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
