[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bigearthnet-dl-distributed"
version = "0.0.1"
description = "Distributed computing tools for training deep learning models on BigEarthNet dataset"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "nbconvert>=7.16.6",
    "petastorm<0.14",
    "pyarrow<11",
    "tqdm>=4.67.1",
    "numpy<2",
    "pandas<2",
    "rasterio>=1.3.10",
    "s3fs>=2025.2.0",
    "keras-unet-collection>=0.1.13",
]

[project.scripts]
gen-metadata = "scripts.gen_metadata:main"
check-s3 = "scripts.check:main"
to-petastorm = "scripts.to_petastorm:main"
train-model = "scripts.train:main"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[dependency-groups]
dev = [
    "commitizen>=4.11.3",
]
gpu = [
    "tensorflow[and-cuda]<=2.17",
    ]
cpu = [
    "tensorflow<=2.17",
    ]
